--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -373,6 +373,8 @@
     <string name="invitation_externe">%1$s vous a invité à : %2$s le %3$s à %4$s \n %5$s</string>
     <string name="profile_externe">%1$s a partagé un profil : %2$s \n %3$s</string>
     <string name="for_kids">For kids</string>
+    <string name="no_user_corresponding_to_mention">Aucun utilisateur correspondant a cette mention</string>
+    <string name="pending">En Attente</string>
 
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
