--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -396,6 +396,8 @@
     <string name="profile_externe">%1$s has shared a profile : %2$s \n %3$s</string>
     <string name="no_user_corresponding_to_mention">No user corresponding to this mention</string>
     <string name="pending">Pending</string>
+    <string name="picture_attached_to_comment">Picture attached to comment</string>
+    <string name="replace">Replace</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
