--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -401,6 +401,12 @@
     <string name="replace">Replace</string>
     <string name="hide_post">Hide this event</string>
     <string name="hide_all_posts">Hide all events from this user</string>
+    <string name="twitter">Twitter</string>
+    <string name="discord">Discord</string>
+    <string name="telegram">Telegram</string>
+    <string name="common">Common</string>
+    <string name="users_hidden">Users hidden</string>
+    <string name="events_hidden">Events hidden</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
