--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -407,6 +407,21 @@
     <string name="common">Common</string>
     <string name="users_hidden">Users hidden</string>
     <string name="events_hidden">Events hidden</string>
+    <string name="choose_a_reason">Why did you decide to report this post?</string>
+    <string name="choose_a_reason_message">Your report is anonymous. If someone is in danger, call immediately for rescue.</string>
+    <string name="spam">Spam</string>
+    <string name="nudity_post">Nudity or sexual act</string>
+    <string name="dont_like_it">I just don\'t like it</string>
+    <string name="hate_speech">Hateful speech or symbols</string>
+    <string name="scam_fraud">Scam or fraud</string>
+    <string name="false_info">False informations</string>
+    <string name="intimidation_bullying">Bullying or harassment</string>
+    <string name="intellectual_property">Intellectual property infringement</string>
+    <string name="violence_post">Violence or dangerous organizations</string>
+    <string name="illegal_sales">Sales of illegal or regulated products</string>
+    <string name="suicide_automutilation">Sucid or self-harm</string>
+    <string name="continu">Continue</string>
+    <string name="not_same_value">Passwords must be the same</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
