--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -238,7 +238,7 @@
     <string name="trim">Réduire</string>
     <string name="actual_password">Mot de passe actuel</string>
     <string name="new_password">Nouveau mot de passe</string>
-    <string name="new_password_again">Réecrire le nouveau mot de passe</string>
+    <string name="new_password_again">Confirmation du nouveau mot de passe</string>
     <string name="other">Autre</string>
     <string name="max_price">Prix max</string>
     <string name="all">Tous</string>
@@ -386,6 +386,21 @@
     <string name="discord">Discord</string>
     <string name="telegram">Telegram</string>
     <string name="common">Common</string>
+    <string name="choose_a_reason">Pourquoi signalez-vous cette publication ?</string>
+    <string name="choose_a_reason_message">Votre signalment est anonyme. Si quelqu\'un se trouve en danger, appelez les secours.</string>
+    <string name="spam">Spam</string>
+    <string name="nudity_post">Nudité ou actes sexuels</string>
+    <string name="dont_like_it">Je n\'aime tout simplement pas</string>
+    <string name="hate_speech">Discours ou symboles haineux</string>
+    <string name="scam_fraud">Arnaque ou fraude</string>
+    <string name="false_info">Fausses informations</string>
+    <string name="intimidation_bullying">Intimidation ou harcèlement</string>
+    <string name="violence_post">Violence ou organisations dangereuses</string>
+    <string name="intellectual_property">Atteinte à la propriété intellectuelle</string>
+    <string name="illegal_sales">Ventes de produits illégaux ou réglementés</string>
+    <string name="suicide_automutilation">Sucide ou automutilation</string>
+    <string name="continu">Continuer</string>
+    <string name="not_same_value">Les mots de passe doivent être les mêmes</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
