--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -250,7 +250,7 @@
     <string name="trim">Trim</string>
     <string name="actual_password">Actual password</string>
     <string name="new_password">New password</string>
-    <string name="new_password_again">Retype new password</string>
+    <string name="new_password_again">Type again new password</string>
     <string name="other">Other</string>
     <string name="max_price">Price max</string>
     <string name="all">All</string>
@@ -314,7 +314,7 @@
     <string name="button_sure">Sure(%1$d)</string>
     <string name="cant_start_with_password">Your password can\'t start with \"dayzee-\"</string>
     <string name="this_is_temporary_password">This is a temporary password. Please change it in order to continue</string>
-    <string name="enter_mail">Please enter the mail link to your Dayzee account in order to receive a temporary password</string>
+    <string name="enter_mail">Please enter the mail link to your Dayzee account</string>
     <string name="certify">Certify</string>
     <string name="update_temporary_password">Update temporary password</string>
     <string name="dayzee_connection">Dayzee Connection</string>
@@ -422,6 +422,7 @@
     <string name="suicide_automutilation">Sucid or self-harm</string>
     <string name="continu">Continue</string>
     <string name="not_same_value">Passwords must be the same</string>
+    <string name="validate_login"><![CDATA[Validate & Login]]></string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
