--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,7 +37,7 @@
     <string name="birthday">Birthday</string>
     <string name="gender">Gender</string>
     <string name="account_status">Account status</string>
-    <string name="timenote_date_format">Dayzee date format</string>
+    <string name="timenote_date_format">Date format appearance of events</string>
     <string name="youtube_channel">Youtube channel</string>
     <string name="describe_yourself">Describe yourself</string>
     <string name="settings">Settings</string>
@@ -50,7 +50,7 @@
     <string name="push_notifications">Push notifications</string>
     <string name="certified_push_notifications">Certified\' push notifications</string>
     <string name="default_settings">DEFAULT SETTINGS</string>
-    <string name="timenote_visibility_format">Dayzee visibility</string>
+    <string name="timenote_visibility_format">Who can see my events</string>
     <string name="timenote_visibility">Dayzee visibility</string>
     <string name="others">OTHERS</string>
     <string name="confidentiality_politic">Confidentiality politic</string>
@@ -314,7 +314,7 @@
     <string name="button_sure">Sure(%1$d)</string>
     <string name="cant_start_with_password">Your password can\'t start with \"dayzee-\"</string>
     <string name="this_is_temporary_password">This is a temporary password. Please change it in order to continue</string>
-    <string name="enter_mail">Please enter the mail link to your Dayzee account</string>
+    <string name="enter_mail">Please enter the mail link to your Dayzee account. A mail, valid 15 minutes, will be sent to change your password (check your spams).</string>
     <string name="certify">Certify</string>
     <string name="update_temporary_password">Update temporary password</string>
     <string name="dayzee_connection">Dayzee Connection</string>
@@ -366,7 +366,7 @@
     <string name="error_network">Error Network</string>
     <string name="youtubers">Youtubers</string>
     <string name="fair_trade">Fair Trade</string>
-    <string name="password_changed_successfully">Password changed successfully</string>
+    <string name="password_changed_successfully">Password changed successfully. Login.</string>
     <string name="live">LIVE</string>
     <string name="in_time">In</string>
     <string name="since_time">Since</string>
@@ -423,6 +423,7 @@
     <string name="continu">Continue</string>
     <string name="not_same_value">Passwords must be the same</string>
     <string name="validate_login"><![CDATA[Validate & Login]]></string>
+    <string name="current_password">Current password</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
