--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -218,7 +218,7 @@
     <string name="msg_token_fmt">token_fcm</string>
     <string name="identifiant">Nom d\'Utilisateur</string>
     <string name="mail">Email</string>
-    <string name="username_email">Email / Nom d\'Utilisateur</string>
+    <string name="username_email">Email ou Nom d\'Utilisateur</string>
     <string name="mask_user">Masquer cet utilisateur</string>
     <string name="add_an_url">Ajouter un lien</string>
     <string name="public_and_private">Publique et Privé</string>
@@ -401,8 +401,10 @@
     <string name="suicide_automutilation">Sucide ou automutilation</string>
     <string name="continu">Continuer</string>
     <string name="not_same_value">Les mots de passe doivent être les mêmes</string>
-    <string name="validate_login"><![CDATA[Valider & Se Connecter]]></string>
+    <string name="validate_login"><![CDATA[Valider et se connecter]]></string>
     <string name="current_password">Mot de passe actuel</string>
+    <string name="confirm_password">Confirmer le mot de passe</string>
+    <string name="username">Nom d\'utilisateur</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
