--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -322,7 +322,7 @@
     <string name="forgotten_password">Forgotten password ?</string>
     <string name="sign_up">Sign Up</string>
     <string name="login">Login</string>
-    <string name="continue_as_guest">CONITNUE AS A GUEST</string>
+    <string name="continue_as_guest">CONTINUE AS A GUEST</string>
     <string name="filters_all_cap">FILTERS</string>
     <string name="people">People</string>
     <string name="tags">Tags</string>
