--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -433,6 +433,7 @@
     <string name="to_connect">LOGIN</string>
     <string name="check_box">You have to accept the conditions in order to continue</string>
     <string name="close">Close</string>
+    <string name="calendar_permission">Calendar permission denied, go to your settings to allow</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
