--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -439,6 +439,8 @@
     <string name="subcategory_needed">Choose a subcategory or clear selection</string>
     <string name="when_create_event">When*</string>
     <string name="title_create_event">Title*</string>
+    <string name="open_gallery_camera">From my gallery</string>
+    <string name="from_nfts">From my NFTs</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
