--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -201,7 +201,7 @@
     <string name="alarm">Alarme</string>
     <string name="report">Signaler</string>
     <string name="hide_to_others">Masquer aux autres</string>
-    <string name="add_end_date">Ajouter une Date de Fin</string>
+    <string name="add_end_date">• Ajouter une date de fin (Optionnel)</string>
     <string name="paid_timenote">Coût</string>
     <string name="no_answer">Pas de Réponses</string>
     <string name="free">Gratuit</string>
@@ -419,6 +419,24 @@
     <string name="when_create_event">Quand*</string>
     <string name="open_gallery_camera">Depuis ma gallerie</string>
     <string name="from_nfts">Depuis mes NFTs</string>
+    <string name="repeat_all">Répéter tou(te)s les</string>
+    <string name="ends_in">Se termine</string>
+    <string name="the">Le</string>
+    <string name="after">Après</string>
+    <string name="occurences">occurences</string>
+    <string name="validate">VALIDER</string>
+    <string name="repeat_the">Répéter le</string>
+    <string name="monday_initial">L</string>
+    <string name="tuesday_initial">M</string>
+    <string name="wednesday_initial">M</string>
+    <string name="thursday_initial">J</string>
+    <string name="friday_initial">V</string>
+    <string name="saturday_initial">S</string>
+    <string name="sunday_initial">D</string>
+    <string name="configure_reccurence">• Configurer une récurrence (Optionnel)</string>
+    <string name="every_month">Le %1$s</string>
+    <string name="_30_occurrences_maximum_are_allowed">30 occurrences maximum</string>
+    <string name="too_many_occurrences">Trop d\'occurrences</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
@@ -539,5 +557,10 @@
         <item quantity="one">Depuis %1$d an et %2$d mois</item>
         <item quantity="other">Depuis %1$d an et %2$d mois</item>
     </plurals>
-
+    <string-array name="period">
+        <item>Jour</item>
+        <item>Mois</item>
+        <item>Semaine</item>
+        <item>Année</item>
+    </string-array>
 </resources>
