--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -483,6 +483,10 @@
         <item quantity="one">Dans %1$d mois</item>
         <item quantity="other">Dans %1$d mois</item>
     </plurals>
+    <plurals name="in_years">
+        <item quantity="one">Dans %1$d an</item>
+        <item quantity="other">Dans %1$d ans</item>
+    </plurals>
     <plurals name="hours_plural_minutes_vary">
         <item quantity="one">Dans %1$d heures et %2$d minute</item>
         <item quantity="other">Dans %1$d heures et %2$d minutes</item>
