--- a/app/src/main/res/values-fr/strings.xml
+++ b/app/src/main/res/values-fr/strings.xml
@@ -439,6 +439,8 @@
     <string name="too_many_occurrences">Trop d\'occurrences</string>
     <string name="since">À partir de</string>
     <string name="who">Visibilités des évènements</string>
+    <string name="compressing">En compression</string>
+    <string name="event_creation_wait">Event is being created. Please wait.</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
