--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -463,6 +463,7 @@
     <string name="who">Visibility of the events</string>
     <string name="compressing">Compressing</string>
     <string name="event_creation_wait">Évènement en cours de création. Veuillez patienter.</string>
+    <string name="delete_account">Delete account</string>
     <plurals name="time_minutes_comment">
         <item quantity="one">%1$d minute</item>
         <item quantity="other">%1$d minutes</item>
